@@ -29,19 +29,24 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
                <release>${maven.compiler.release}</release>
-               <source>17</source>
-               <target>17</target>
-               <compilerArgs>
-                  <arg>--add-exports=jdk.incubator.foreign/jdk.incubator.foreign=ALL-UNNAMED</arg>
-               </compilerArgs>
+               <compilerArgs>--enable-preview</compilerArgs>
+               <source>14</source>
+               <target>14</target>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${surefire.plugin.version}</version>
+            <configuration>
+               <argLine>--enable-preview</argLine>
             </configuration>
          </plugin>
       </plugins>
    </build>
 
    <properties>
-      <maven.compiler.release>17</maven.compiler.release>
-      <maven.compiler.source>17</maven.compiler.source>
-      <maven.compiler.target>17</maven.compiler.target>
+      <maven.compiler.release>14</maven.compiler.release>
+      <surefire.plugin.version>3.0.0-M3</surefire.plugin.version>
    </properties>
 </project>
