@@ -4,13 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>java-17</artifactId>
-   <version>1.0.0</version>
    <name>java-17</name>
    <packaging>jar</packaging>
 
    <parent>
-      <artifactId>java-core-modules</artifactId>
       <groupId>cn.tuyucheng.taketoday.java-core-modules</groupId>
+      <artifactId>java-core-modules</artifactId>
       <version>1.0.0</version>
    </parent>
 
@@ -36,20 +35,8 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>${surefire.plugin.version}</version>
             <configuration>
-               <argLine>${argLine} --enable-preview
-                  --add-reads core.java=ALL-UNNAMED
-                  --add-opens core.java/cn.tuyucheng.taketoday.features=ALL-UNNAMED
-                  --add-opens core.java/cn.tuyucheng.taketoday.instantsource=ALL-UNNAMED
-                  --add-opens core.java/cn.tuyucheng.taketoday.randomgenerators=ALL-UNNAMED
-                  --add-opens core.java/cn.tuyucheng.taketoday.sealed.alternative=ALL-UNNAMED
-                  --add-opens core.java/cn.tuyucheng.taketoday.sealed.classes=ALL-UNNAMED
-                  --add-opens core.java/cn.tuyucheng.taketoday.sealed.records=ALL-UNNAMED
-                  --add-opens core.java/cn.tuyucheng.taketoday.switchpatterns=ALL-UNNAMED
-                  --add-opens core.java/cn.tuyucheng.taketoday.hexformat=ALL-UNNAMED
-                  --add-opens core.java/cn.tuyucheng.taketoday.java17=ALL-UNNAMED
-                  --add-modules core.java
-               </argLine>
-               <!--<argLine>&#45;&#45;enable-native-access=core.java</argLine>-->
+               <argLine>--enable-preview</argLine>
+               <argLine>--enable-native-access=core.java</argLine>
                <forkCount>1</forkCount>
             </configuration>
             <dependencies>
@@ -80,4 +67,5 @@
    <properties>
       <surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
    </properties>
+
 </project>
