@@ -36,60 +36,30 @@
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-toolchains-plugin</artifactId>
-            <version>${maven-toolchains-plugin-version}</version>
-            <executions>
-               <execution>
-                  <goals>
-                     <goal>toolchain</goal>
-                  </goals>
-               </execution>
-            </executions>
-            <configuration>
-               <toolchains>
-                  <jdk>
-                     <version>${java.toolchains.version}</version>
-                  </jdk>
-               </toolchains>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven-compiler-plugin.version}</version>
             <configuration>
+               <source>20</source>
+               <target>20</target>
                <compilerArgs>
                   <arg>--enable-preview</arg>
                   <arg>--add-modules=jdk.incubator.concurrent</arg>
-                  <arg>--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED</arg>
                </compilerArgs>
-               <source>${maven.compiler.source}</source>
-               <target>${maven.compiler.target}</target>
-               <showDeprecation>true</showDeprecation>
-               <showWarnings>true</showWarnings>
             </configuration>
          </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M8</version>
             <configuration>
-               <argLine>${argLine} --enable-preview
-                  --add-modules=jdk.incubator.concurrent
-                  --add-exports=java.base/jdk.internal.vm=ALL-UNNAMED
-               </argLine>
-               <forkCount>1</forkCount>
+               <argLine>--enable-preview --add-modules=jdk.incubator.concurrent</argLine>
             </configuration>
          </plugin>
       </plugins>
    </build>
 
-
    <properties>
-      <java.toolchains.version>20</java.toolchains.version>
-      <maven-toolchains-plugin-version>3.1.0</maven-toolchains-plugin-version>
       <maven.compiler.source>20</maven.compiler.source>
       <maven.compiler.target>20</maven.compiler.target>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
+
 </project>
