@@ -4,7 +4,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>java-serialization</artifactId>
-   <version>1.0.0</version>
    <name>java-serialization</name>
    <packaging>jar</packaging>
 
@@ -43,6 +42,12 @@
          <version>${spring.core.version}</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.projectlombok</groupId>
+         <artifactId>lombok</artifactId>
+         <version>${lombok.version}</version>
+         <scope>provided</scope>
+      </dependency>
    </dependencies>
 
    <build>
@@ -54,43 +59,6 @@
          </resource>
       </resources>
       <plugins>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
-            <configuration>
-               <source>17</source>
-               <target>17</target>
-               <!--<release>17</release>-->
-               <fork>true</fork>
-               <compilerArgs>
-                  <arg>--enable-preview</arg>
-                  <arg>-Xlint:all</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
-               </compilerArgs>
-               <!--for unmappable characters in classes-->
-               <encoding>UTF-8</encoding>
-               <showDeprecation>true</showDeprecation>
-               <showWarnings>true</showWarnings>
-               <!--for lombok annotations to resolve zcontradictory to maven, intelliJ fails with this-->
-               <annotationProcessorPaths>
-                  <path>
-                     <groupId>org.projectlombok</groupId>
-                     <artifactId>lombok</artifactId>
-                     <version>1.18.16</version>
-                  </path>
-               </annotationProcessorPaths>
-            </configuration>
-         </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
@@ -171,7 +139,7 @@
                   <executions>
                      <execution>
                         <id>run-benchmarks</id>
-                        <!--<phase>integration-test</phase>-->
+                        <!-- <phase>integration-test</phase> -->
                         <phase>none</phase>
                         <goals>
                            <goal>exec</goal>
@@ -198,7 +166,8 @@
       <unix4j.version>0.4</unix4j.version>
       <grep4j.version>1.8.7</grep4j.version>
       <javamoney.moneta.version>1.1</javamoney.moneta.version>
-      <maven-javadoc-plugin.version>3.0.0-M1</maven-javadoc-plugin.version>
-      <spring.core.version>5.3.25</spring.core.version>
+      <maven-javadoc-plugin.version>3.6.2</maven-javadoc-plugin.version>
+      <spring.core.version>4.3.20.RELEASE</spring.core.version>
    </properties>
+
 </project>
